# drf-exception-logger

./: LICENSE  README.md  pyproject.toml
drf_exception_logger/: exception_logger.py
