[tool.poetry]
name = "drf-exception-logger"
version = "0.1.0"
description = "Package to catch and log exceptions in django applications"
authors = ["Tim <tim.jones@adlucent.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
djangorestframework = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
